added "SemVerStampActive" to .props-file generation
Fody -> MSBuild

--- a/SemVer.Fody/MSBuildConfigurationTemplate.tt
+++ b/SemVer.Fody/MSBuildConfigurationTemplate.tt
@@ -9,5 +9,6 @@
     <FeatureFormat><#= this.Configuration.FeatureFormat #></FeatureFormat>
     <PatchFormat><#= this.Configuration.PatchFormat #></PatchFormat>
     <RepositoryPath><#= this.Configuration.UseProject ? "$(ProjectDir)" : "$(SolutionDir)" #></RepositoryPath>
+    <SemVerStampActive><#= this.Configuration.SemVerStampActive #></SemVerStampActive>
   </PropertyGroup>
 </Project>
